--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -222,7 +222,12 @@ jobs:
           asset_content_type: application/zip
 
   build-browser-extension:
-    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [ubuntu-22.04, macos-13]
+
+    runs-on: ${{ matrix.platform }}
 
     permissions:
       contents: write
@@ -267,8 +272,19 @@ jobs:
           mv dist/openai-translator.user.js release/openai-translator-${{ steps.get_version.outputs.version-without-v }}.user.js
           cd release
           zip -r openai-translator-chrome-extension-${{ steps.get_version.outputs.version-without-v }}.zip ./openai-translator-chrome-extension-${{ steps.get_version.outputs.version-without-v }}/*
+      
+      - name: Build safari extension
+        if: matrix.platform == 'macos-13'
+        run: |
+          sudo xcode-select -s /Applications/Xcode_14.3.app/Contents/Developer
+          sed -i '' 's/MARKETING_VERSION = .*/MARKETING_VERSION = ${{ steps.get_version.outputs.version-without-v }};/g' "src-safari/OpenAI Translator.xcodeproj/project.pbxproj"
+          xcodebuild -project "src-safari/OpenAI Translator.xcodeproj" -scheme "OpenAI Translator (macOS)" -configuration Release archive -archivePath "dist/browser-extension/safari/OpenAI Translator.xcarchive"
+          xcodebuild -exportArchive -archivePath "dist/browser-extension/safari/OpenAI Translator.xcarchive" -exportPath "dist/browser-extension/safari" -exportOptionsPlist "src-safari/export-opt.plist"
+          cd dist/browser-extension/safari
+          zip -r openai-translator-safari-extension-${{ steps.get_version.outputs.version-without-v }}.zip ./OpenAI\ Translator.app
 
       - name: Upload extensions to release
+        if: matrix.platform == 'ubuntu-22.04'
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
@@ -280,6 +296,7 @@ jobs:
           asset_content_type: application/zip
 
       - name: Upload userscript to release
+        if: matrix.platform == 'ubuntu-22.04'
         id: upload-userscript-asset
         uses: actions/upload-release-asset@v1
         env:
@@ -289,6 +306,18 @@ jobs:
           asset_path: release/openai-translator-${{ steps.get_version.outputs.version-without-v }}.user.js
           asset_name: openai-translator-${{ steps.get_version.outputs.version-without-v }}.user.js
           asset_content_type: application/javascript
+      
+      - name: Upload safari extension to release
+        if: matrix.platform == 'macos-13'
+        id: upload-safari-extension-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.release_upload_url }}
+          asset_path: dist/browser-extension/safari/openai-translator-safari-extension-${{ steps.get_version.outputs.version-without-v }}.zip
+          asset_name: openai-translator-safari-extension-${{ steps.get_version.outputs.version-without-v }}.zip
+          asset_content_type: application/zip
 
   publish-release:
     permissions:
